[package]
name = "sb-backend-cros-proxy"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-tls = { version = "0.6.0" ,features=["vendored"] }
hyper-util = { version = "0.1.3", features = ["client-legacy", "full"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
 